// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transaction Send should render 1`] = `
<DocumentFragment>
  <div
    class="max-w-xl py-16 mx-auto"
  >
    <div>
      <ul
        class="StepIndicator___StyledUl-sc-15t41is-1 dhAbBb"
      >
        <li
          class="StepIndicator__StepStyled-sc-15t41is-0 crUtTP"
        />
        <li
          class="StepIndicator__StepStyled-sc-15t41is-0 eXvSeq"
        />
        <li
          class="StepIndicator__StepStyled-sc-15t41is-0 eXvSeq"
        />
        <li
          class="StepIndicator__StepStyled-sc-15t41is-0 eXvSeq"
        />
        <li
          class="StepIndicator__StepStyled-sc-15t41is-0 eXvSeq"
        />
      </ul>
      <div
        class="mt-8"
      >
        <div
          data-testid="tab-pabel__active-panel"
        >
          <section
            data-testid="TransactionSend__step--first"
          >
            <div>
              <h1
                class="mb-0"
              >
                Send
              </h1>
              <p
                class="text-theme-neutral-dark"
              >
                Enter details to send your money
              </p>
            </div>
            <div
              class="mt-8"
            >
              <div
                class="sc-fzoLag fVuGur"
              >
                <form
                  class="space-y-8"
                  data-testid="Form"
                  id="send-transaction__form"
                >
                  <fieldset
                    class="sc-AxhCb ckQmOL relative mt-1"
                  >
                    <div
                      class="mb-2"
                    >
                      <label
                        class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                        data-testid="FormLabel"
                        for="network"
                        label="Network"
                      >
                        Network
                      </label>
                    </div>
                    <div
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-1-label"
                      class="relative"
                      role="combobox"
                    >
                      <label
                        for="downshift-1-input"
                        id="downshift-1-label"
                      />
                      <div
                        class="relative flex items-center w-full flex-inline"
                      >
                        <div
                          class="flex w-full border rounded transition-colors duration-200 shadow-sm bg-theme-background border-theme-neutral-300 hover:outline-none hover:border-theme-primary"
                        >
                          <div
                            class="px-4 py-2 flex-0 w-14"
                          >
                            <div
                              class="sc-AxiKw cxOZEi border-theme-neutral-200"
                            />
                          </div>
                          <div
                            class="relative flex-1 p-1 font-semibold text-theme-neutral-800"
                          >
                            <div
                              class="relative z-10 w-full"
                              data-testid="select-network__typeahead-"
                            >
                              <div
                                class="absolute left-0 font-semibold top-2 text-theme-neutral-400"
                              />
                            </div>
                            <input
                              aria-autocomplete="list"
                              aria-labelledby="downshift-1-label"
                              autocomplete="off"
                              class="relative z-20 w-full h-full font-semibold bg-transparent outline-none"
                              data-testid="select-asset__input"
                              id="downshift-1-input"
                              name="network"
                              placeholder="Enter a network name"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        aria-labelledby="downshift-1-label"
                        class="select-asset__items"
                        data-testid="select-asset__items"
                        id="downshift-1-menu"
                        role="listbox"
                      >
                        <div
                          aria-selected="false"
                          class="inline-block pt-6 mr-6 cursor-pointer"
                          id="downshift-1-item-0"
                          role="option"
                          title="Ark Ecosystem"
                        >
                          <div
                            class="sc-AxiKw hbPDzJ text-theme-danger-400 border-theme-danger-200"
                          >
                            <div
                              class="sc-AxhUy gkBhrK"
                              height="26"
                              width="26"
                            >
                              <svg>
                                ark.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                        <div
                          aria-selected="false"
                          class="inline-block pt-6 mr-6 cursor-pointer"
                          id="downshift-1-item-1"
                          role="option"
                          title="Bitcoin"
                        >
                          <div
                            class="sc-AxiKw hbPDzJ text-theme-warning-400 border-theme-warning-200"
                          >
                            <div
                              class="sc-AxhUy gkBhrK"
                              height="26"
                              width="26"
                            >
                              <svg>
                                btc.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                        <div
                          aria-selected="false"
                          class="inline-block pt-6 mr-6 cursor-pointer"
                          id="downshift-1-item-2"
                          role="option"
                          title="Ethereum"
                        >
                          <div
                            class="sc-AxiKw hbPDzJ text-theme-neutral-800 border-theme-neutral-600"
                          >
                            <div
                              class="sc-AxhUy gkBhrK"
                              height="26"
                              width="26"
                            >
                              <svg>
                                eth.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="sc-AxhCb ckQmOL relative h-20 "
                  >
                    <div
                      class="mb-2"
                    >
                      <label
                        class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                        data-testid="FormLabel"
                        for="sender"
                        label="Sender"
                      >
                        Sender
                      </label>
                    </div>
                    <div
                      class="sc-fzozJi OgXfh ProfileFormField__select-contact select-transparent"
                    >
                      <div
                        class="sc-fzozJi OgXfh"
                      >
                        <select
                          class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 pr-12"
                          data-testid="ProfileFormField__select-sender"
                          name="sender"
                        >
                          <option
                            disabled=""
                            selected=""
                            value=""
                          >
                             
                          </option>
                          <option
                            data-testid="ProfileFormField__profile-select"
                            value="FJKDSALJFKASLJFKSDAJFKFKDSAJFKSAJFKLASJKDFJ"
                          >
                            My Wallet FJKDSALJFKASL...SAJFKLASJKDFJ
                          </option>
                        </select>
                        <div
                          class="sc-AxheI sc-AxmLO ecniej w-12 text-lg pointer-events-none text-theme-neutral-dark"
                        >
                          <div
                            class="sc-AxhUy cPXLjK"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sc-AxheI sc-AxmLO ecniej"
                      >
                        <button
                          class="px-3 pr-2 text-theme-primary-300 focus:outline-none"
                        >
                          <div
                            class="sc-AxhUy hSYVGy"
                            height="20"
                            width="20"
                          >
                            <svg>
                              user.svg
                            </svg>
                          </div>
                        </button>
                        <div
                          class="sc-fzoyAV futolF border-theme-neutral-300"
                          type="vertical"
                        />
                        <button
                          class="pl-2 pr-4 text-theme-primary-300 focus:outline-none"
                        >
                          <div
                            class="sc-AxhUy hSYVGy"
                            height="20"
                            width="20"
                          >
                            <svg>
                              receive.svg
                            </svg>
                          </div>
                        </button>
                      </div>
                    </div>
                    <div
                      class="absolute ml-4 -mt-10"
                    >
                      <div
                        class="sc-AxiKw cxOZEi mt-px bg-theme-neutral-200 border-theme-neutral-200"
                      />
                    </div>
                  </fieldset>
                  <fieldset
                    class="sc-AxhCb ckQmOL relative h-20 "
                  >
                    <div
                      class="mb-2"
                    >
                      <label
                        class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                        data-testid="FormLabel"
                        for="recipient"
                        label="Recipient"
                      >
                        Recipient
                      </label>
                    </div>
                    <div
                      class="sc-fzozJi OgXfh ProfileFormField__select-contact select-transparent"
                    >
                      <div
                        class="sc-fzozJi OgXfh"
                      >
                        <select
                          class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 pr-12"
                          data-testid="ProfileFormField__select-recipient"
                          name="recipient"
                        >
                          <option
                            disabled=""
                            selected=""
                            value=""
                          >
                             
                          </option>
                          <option
                            data-testid="ProfileFormField__profile-select"
                            value="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                          >
                            Recipient Wallet FJKDSALJFKASL...SAJFKLASJKDFJ
                          </option>
                          <option
                            data-testid="ProfileFormField__profile-select"
                            value="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                          >
                             Recipient Multisig AhFJKDSALJFKA...SAJFKLASJKDFJ
                          </option>
                          <option
                            data-testid="ProfileFormField__profile-select"
                            value="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                          >
                            Recipient in Ark FAhFJKDSALJFK...SAJFKLASJKDFJ
                          </option>
                        </select>
                        <div
                          class="sc-AxheI sc-AxmLO ecniej w-12 text-lg pointer-events-none text-theme-neutral-dark"
                        >
                          <div
                            class="sc-AxhUy cPXLjK"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sc-AxheI sc-AxmLO ecniej"
                      >
                        <button
                          class="px-3 pr-2 text-theme-primary-300 focus:outline-none"
                        >
                          <div
                            class="sc-AxhUy hSYVGy"
                            height="20"
                            width="20"
                          >
                            <svg>
                              user.svg
                            </svg>
                          </div>
                        </button>
                        <div
                          class="sc-fzoyAV futolF border-theme-neutral-300"
                          type="vertical"
                        />
                        <button
                          class="pl-2 pr-4 text-theme-primary-300 focus:outline-none"
                        >
                          <div
                            class="sc-AxhUy hSYVGy"
                            height="20"
                            width="20"
                          >
                            <svg>
                              receive.svg
                            </svg>
                          </div>
                        </button>
                      </div>
                    </div>
                    <div
                      class="absolute ml-4 -mt-10"
                    >
                      <div
                        class="sc-AxiKw cxOZEi mt-px bg-theme-neutral-200 border-theme-neutral-200"
                      />
                    </div>
                  </fieldset>
                  <fieldset
                    class="sc-AxhCb ckQmOL relative mt-1"
                  >
                    <div
                      class="mb-2"
                    >
                      <label
                        class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                        data-testid="FormLabel"
                        for="amount"
                        label="Amount ARK"
                      >
                        Amount ARK
                      </label>
                    </div>
                    <div
                      class="sc-fzozJi OgXfh"
                    >
                      <input
                        class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 pr-20"
                        data-testid="send-transaction__amount-input"
                        name="amount"
                        placeholder="Amount"
                        type="number"
                      />
                      <div
                        class="sc-AxheI sc-AxmLO ecniej"
                      >
                        <button
                          class="pl-6 pr-4 bg-white text-theme-primary bg-theme-background focus:outline-none"
                          data-testid="send-transaction__send-all"
                        >
                          Send All
                        </button>
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="sc-AxhCb ckQmOL relative mt-1"
                  >
                    <div
                      class="mb-2"
                    >
                      <label
                        class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                        data-testid="FormLabel"
                        for="smartbridge"
                        label="Smartbridge"
                      >
                        Smartbridge
                      </label>
                    </div>
                    <div
                      class="sc-fzozJi OgXfh"
                    >
                      <input
                        class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 pr-20"
                        data-testid="Input"
                        maxlength="255"
                        name="smartbridge"
                        placeholder=" "
                        type="text"
                      />
                      <div
                        class="sc-AxheI sc-AxmLO ecniej"
                      >
                        <button
                          class="px-4 text-theme-neutral-400 focus:outline-none"
                        >
                          255 Max
                        </button>
                      </div>
                    </div>
                  </fieldset>
                  <div
                    class="flex"
                  >
                    <div
                      class="w-2/4"
                    >
                      <fieldset
                        class="sc-AxhCb ckQmOL relative mt-1"
                      >
                        <div
                          class="mb-2"
                        >
                          <label
                            class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                            data-testid="FormLabel"
                            for="fee"
                            label="Fee ARK"
                          >
                            Fee ARK
                          </label>
                          <div
                            class="sc-fzozJi OgXfh"
                          >
                            <input
                              class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 "
                              data-testid="InputCurrency"
                              name="fee"
                              type="text"
                              value="0"
                            />
                            <div
                              class="absolute bottom-0 w-full px-1"
                            >
                              <div
                                class="flex flex-wrap justify-center"
                                data-testid="Range"
                              >
                                <div
                                  class="sc-fzoLsD gcqOdX"
                                  data-testid="Range__track"
                                  style="transform: scale(1); cursor: pointer;"
                                >
                                  <div
                                    class="sc-fzpans fDmiZy"
                                    data-testid="Range__track__filled"
                                  >
                                    <div
                                      aria-valuemax="100"
                                      aria-valuemin="0"
                                      aria-valuenow="0"
                                      class="sc-fzplWN eSQZBV"
                                      data-testid="Range__thumb"
                                      draggable="false"
                                      role="slider"
                                      style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                                      tabindex="0"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </fieldset>
                    </div>
                    <div
                      class="w-2/4 text-right mt-7"
                    >
                      <div
                        class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300 shadow-sm"
                        data-testid="SelectionBar"
                        role="radiogroup"
                      >
                        <button
                          aria-checked="false"
                          class="sc-fzqNJr kLZRsr relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                          data-testid="SelectionBarOption"
                          role="radio"
                        >
                          Last
                        </button>
                        <button
                          aria-checked="false"
                          class="sc-fzqNJr kLZRsr relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                          data-testid="SelectionBarOption"
                          role="radio"
                        >
                          Min
                        </button>
                        <button
                          aria-checked="false"
                          class="sc-fzqNJr kLZRsr relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                          data-testid="SelectionBarOption"
                          role="radio"
                        >
                          Average
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex justify-end space-x-3"
                  >
                    <button
                      class="sc-AxirZ fhzkRl"
                      color="primary"
                      data-testid="send-transaction-click-back"
                      type="button"
                    >
                      Back
                    </button>
                    <button
                      class="sc-AxirZ dPtiuf"
                      color="primary"
                      data-testid="send-transaction-click-submit"
                      type="submit"
                    >
                      Continue
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </section>
        </div>
        <div
          class="flex justify-end mt-8 space-x-3"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Transaction Send should render 1st step 1`] = `
<DocumentFragment>
  <section
    data-testid="TransactionSend__step--first"
  >
    <div>
      <h1
        class="mb-0"
      >
        Send
      </h1>
      <p
        class="text-theme-neutral-dark"
      >
        Enter details to send your money
      </p>
    </div>
    <div
      class="mt-8"
    >
      <div
        class="sc-fzoLag fVuGur"
      >
        <form
          class="space-y-8"
          data-testid="Form"
          id="send-transaction__form"
        >
          <fieldset
            class="sc-AxhCb ckQmOL relative mt-1"
          >
            <div
              class="mb-2"
            >
              <label
                class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                for="network"
                label="Network"
              >
                Network
              </label>
            </div>
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="downshift-0-label"
              class="relative"
              role="combobox"
            >
              <label
                for="downshift-0-input"
                id="downshift-0-label"
              />
              <div
                class="relative flex items-center w-full flex-inline"
              >
                <div
                  class="flex w-full border rounded transition-colors duration-200 shadow-sm bg-theme-background border-theme-neutral-300 hover:outline-none hover:border-theme-primary"
                >
                  <div
                    class="px-4 py-2 flex-0 w-14"
                  >
                    <div
                      class="sc-AxiKw cxOZEi border-theme-neutral-200"
                    />
                  </div>
                  <div
                    class="relative flex-1 p-1 font-semibold text-theme-neutral-800"
                  >
                    <div
                      class="relative z-10 w-full"
                      data-testid="select-network__typeahead-"
                    >
                      <div
                        class="absolute left-0 font-semibold top-2 text-theme-neutral-400"
                      />
                    </div>
                    <input
                      aria-autocomplete="list"
                      aria-labelledby="downshift-0-label"
                      autocomplete="off"
                      class="relative z-20 w-full h-full font-semibold bg-transparent outline-none"
                      data-testid="select-asset__input"
                      id="downshift-0-input"
                      name="network"
                      placeholder="Enter a network name"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="downshift-0-label"
                class="select-asset__items"
                data-testid="select-asset__items"
                id="downshift-0-menu"
                role="listbox"
              >
                <div
                  aria-selected="false"
                  class="inline-block pt-6 mr-6 cursor-pointer"
                  id="downshift-0-item-0"
                  role="option"
                  title="Ark Ecosystem"
                >
                  <div
                    class="sc-AxiKw hbPDzJ text-theme-danger-400 border-theme-danger-200"
                  >
                    <div
                      class="sc-AxhUy gkBhrK"
                      height="26"
                      width="26"
                    >
                      <svg>
                        ark.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="inline-block pt-6 mr-6 cursor-pointer"
                  id="downshift-0-item-1"
                  role="option"
                  title="Bitcoin"
                >
                  <div
                    class="sc-AxiKw hbPDzJ text-theme-warning-400 border-theme-warning-200"
                  >
                    <div
                      class="sc-AxhUy gkBhrK"
                      height="26"
                      width="26"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="inline-block pt-6 mr-6 cursor-pointer"
                  id="downshift-0-item-2"
                  role="option"
                  title="Ethereum"
                >
                  <div
                    class="sc-AxiKw hbPDzJ text-theme-neutral-800 border-theme-neutral-600"
                  >
                    <div
                      class="sc-AxhUy gkBhrK"
                      height="26"
                      width="26"
                    >
                      <svg>
                        eth.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
          <fieldset
            class="sc-AxhCb ckQmOL relative h-20 "
          >
            <div
              class="mb-2"
            >
              <label
                class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                for="sender"
                label="Sender"
              >
                Sender
              </label>
            </div>
            <div
              class="sc-fzozJi OgXfh ProfileFormField__select-contact select-transparent"
            >
              <div
                class="sc-fzozJi OgXfh"
              >
                <select
                  class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 pr-12"
                  data-testid="ProfileFormField__select-sender"
                  name="sender"
                >
                  <option
                    disabled=""
                    selected=""
                    value=""
                  >
                     
                  </option>
                  <option
                    data-testid="ProfileFormField__profile-select"
                    value="FJKDSALJFKASLJFKSDAJFKFKDSAJFKSAJFKLASJKDFJ"
                  >
                    My Wallet FJKDSALJFKASL...SAJFKLASJKDFJ
                  </option>
                </select>
                <div
                  class="sc-AxheI sc-AxmLO ecniej w-12 text-lg pointer-events-none text-theme-neutral-dark"
                >
                  <div
                    class="sc-AxhUy cPXLjK"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      chevron-down.svg
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="sc-AxheI sc-AxmLO ecniej"
              >
                <button
                  class="px-3 pr-2 text-theme-primary-300 focus:outline-none"
                >
                  <div
                    class="sc-AxhUy hSYVGy"
                    height="20"
                    width="20"
                  >
                    <svg>
                      user.svg
                    </svg>
                  </div>
                </button>
                <div
                  class="sc-fzoyAV futolF border-theme-neutral-300"
                  type="vertical"
                />
                <button
                  class="pl-2 pr-4 text-theme-primary-300 focus:outline-none"
                >
                  <div
                    class="sc-AxhUy hSYVGy"
                    height="20"
                    width="20"
                  >
                    <svg>
                      receive.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="absolute ml-4 -mt-10"
            >
              <div
                class="sc-AxiKw cxOZEi mt-px bg-theme-neutral-200 border-theme-neutral-200"
              />
            </div>
          </fieldset>
          <fieldset
            class="sc-AxhCb ckQmOL relative h-20 "
          >
            <div
              class="mb-2"
            >
              <label
                class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                for="recipient"
                label="Recipient"
              >
                Recipient
              </label>
            </div>
            <div
              class="sc-fzozJi OgXfh ProfileFormField__select-contact select-transparent"
            >
              <div
                class="sc-fzozJi OgXfh"
              >
                <select
                  class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 pr-12"
                  data-testid="ProfileFormField__select-recipient"
                  name="recipient"
                >
                  <option
                    disabled=""
                    selected=""
                    value=""
                  >
                     
                  </option>
                  <option
                    data-testid="ProfileFormField__profile-select"
                    value="FJKDSALJFKASLJFKSDAJD333FKFKDSAJFKSAJFKLASJKDFJ"
                  >
                    Recipient Wallet FJKDSALJFKASL...SAJFKLASJKDFJ
                  </option>
                  <option
                    data-testid="ProfileFormField__profile-select"
                    value="AhFJKDSALJFKASLJFKSDEAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  >
                     Recipient Multisig AhFJKDSALJFKA...SAJFKLASJKDFJ
                  </option>
                  <option
                    data-testid="ProfileFormField__profile-select"
                    value="FAhFJKDSALJFKASLJFKSFDAJ333FKFKDSAJFKSAJFKLASJKDFJ"
                  >
                    Recipient in Ark FAhFJKDSALJFK...SAJFKLASJKDFJ
                  </option>
                </select>
                <div
                  class="sc-AxheI sc-AxmLO ecniej w-12 text-lg pointer-events-none text-theme-neutral-dark"
                >
                  <div
                    class="sc-AxhUy cPXLjK"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      chevron-down.svg
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="sc-AxheI sc-AxmLO ecniej"
              >
                <button
                  class="px-3 pr-2 text-theme-primary-300 focus:outline-none"
                >
                  <div
                    class="sc-AxhUy hSYVGy"
                    height="20"
                    width="20"
                  >
                    <svg>
                      user.svg
                    </svg>
                  </div>
                </button>
                <div
                  class="sc-fzoyAV futolF border-theme-neutral-300"
                  type="vertical"
                />
                <button
                  class="pl-2 pr-4 text-theme-primary-300 focus:outline-none"
                >
                  <div
                    class="sc-AxhUy hSYVGy"
                    height="20"
                    width="20"
                  >
                    <svg>
                      receive.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="absolute ml-4 -mt-10"
            >
              <div
                class="sc-AxiKw cxOZEi mt-px bg-theme-neutral-200 border-theme-neutral-200"
              />
            </div>
          </fieldset>
          <fieldset
            class="sc-AxhCb ckQmOL relative mt-1"
          >
            <div
              class="mb-2"
            >
              <label
                class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                for="amount"
                label="Amount ARK"
              >
                Amount ARK
              </label>
            </div>
            <div
              class="sc-fzozJi OgXfh"
            >
              <input
                class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 pr-20"
                data-testid="send-transaction__amount-input"
                name="amount"
                placeholder="Amount"
                type="number"
              />
              <div
                class="sc-AxheI sc-AxmLO ecniej"
              >
                <button
                  class="pl-6 pr-4 bg-white text-theme-primary bg-theme-background focus:outline-none"
                  data-testid="send-transaction__send-all"
                >
                  Send All
                </button>
              </div>
            </div>
          </fieldset>
          <fieldset
            class="sc-AxhCb ckQmOL relative mt-1"
          >
            <div
              class="mb-2"
            >
              <label
                class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                for="smartbridge"
                label="Smartbridge"
              >
                Smartbridge
              </label>
            </div>
            <div
              class="sc-fzozJi OgXfh"
            >
              <input
                class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 pr-20"
                data-testid="Input"
                maxlength="255"
                name="smartbridge"
                placeholder=" "
                type="text"
              />
              <div
                class="sc-AxheI sc-AxmLO ecniej"
              >
                <button
                  class="px-4 text-theme-neutral-400 focus:outline-none"
                >
                  255 Max
                </button>
              </div>
            </div>
          </fieldset>
          <div
            class="flex"
          >
            <div
              class="w-2/4"
            >
              <fieldset
                class="sc-AxhCb ckQmOL relative mt-1"
              >
                <div
                  class="mb-2"
                >
                  <label
                    class="flex inline-block mb-2 text-sm FormLabel transition-colors duration-100 text-theme-neutral-dark"
                    data-testid="FormLabel"
                    for="fee"
                    label="Fee ARK"
                  >
                    Fee ARK
                  </label>
                  <div
                    class="sc-fzozJi OgXfh"
                  >
                    <input
                      class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 "
                      data-testid="InputCurrency"
                      name="fee"
                      type="text"
                      value="0"
                    />
                    <div
                      class="absolute bottom-0 w-full px-1"
                    >
                      <div
                        class="flex flex-wrap justify-center"
                        data-testid="Range"
                      >
                        <div
                          class="sc-fzoLsD gcqOdX"
                          data-testid="Range__track"
                          style="transform: scale(1); cursor: pointer;"
                        >
                          <div
                            class="sc-fzpans fDmiZy"
                            data-testid="Range__track__filled"
                          >
                            <div
                              aria-valuemax="100"
                              aria-valuemin="0"
                              aria-valuenow="0"
                              class="sc-fzplWN eSQZBV"
                              data-testid="Range__thumb"
                              draggable="false"
                              role="slider"
                              style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                              tabindex="0"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </fieldset>
            </div>
            <div
              class="w-2/4 text-right mt-7"
            >
              <div
                class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300 shadow-sm"
                data-testid="SelectionBar"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  class="sc-fzqNJr kLZRsr relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                  data-testid="SelectionBarOption"
                  role="radio"
                >
                  Last
                </button>
                <button
                  aria-checked="false"
                  class="sc-fzqNJr kLZRsr relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                  data-testid="SelectionBarOption"
                  role="radio"
                >
                  Min
                </button>
                <button
                  aria-checked="false"
                  class="sc-fzqNJr kLZRsr relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                  data-testid="SelectionBarOption"
                  role="radio"
                >
                  Average
                </button>
              </div>
            </div>
          </div>
          <div
            class="flex justify-end space-x-3"
          >
            <button
              class="sc-AxirZ fhzkRl"
              color="primary"
              data-testid="send-transaction-click-back"
              type="button"
            >
              Back
            </button>
            <button
              class="sc-AxirZ dPtiuf"
              color="primary"
              data-testid="send-transaction-click-submit"
              type="submit"
            >
              Continue
            </button>
          </div>
        </form>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Transaction Send should render 2nd step 1`] = `
<DocumentFragment>
  <section
    data-testid="TransactionSend__step--second"
  >
    <div>
      <h1
        class="mb-0"
      >
        Transaction Review
      </h1>
      <p
        class="text-theme-neutral-dark"
      >
        Check the information again before voting
      </p>
    </div>
    <div
      class="mt-4 grid grid-flow-row gap-2"
    >
      <div
        class="flex items-center py-6 true "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Network
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="flex-auto font-semibold truncate text-md text-theme-neutral-800 max-w-24"
            >
              ARK Ecosystem
            </div>
          </div>
        </div>
        <div
          class="ml-1 text-theme-danger-500"
        >
          <div
            class="sc-AxiKw jQtkkF bg-theme-background border-theme-danger-200"
          >
            <div
              class="sc-AxhUy hSYVGy"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
             
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="mb-2 font-semibold text-theme-neutral-500"
            >
              <span
                class="mr-1 text-sm"
              >
                Sender
              </span>
              <div
                class="sc-fznyAO dkNXHq"
                color="warning"
              >
                <span
                  class="text-sm"
                >
                  Your address
                </span>
              </div>
            </div>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                data-testid="address__wallet-name"
              >
                ROBank
              </span>
              <span
                class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
                data-testid="address__wallet-address"
              >
                AUexKj…EVTQWK
              </span>
            </div>
          </div>
        </div>
        <div>
          <div
            class="sc-AxiKw kvRvRJ"
          />
        </div>
      </div>
      <div
        class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 py-6"
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Recipients
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="pt-2"
            >
              <div
                class="sc-fzqBZW cBnliu"
                role="table"
              >
                <table
                  class="table-auto"
                >
                  <thead>
                    <tr
                      role="row"
                    >
                      <th
                        class="text-sm text-left select-none text-theme-neutral-500"
                        colspan="1"
                        data-testid="table__th--0"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top  invisible w-2"
                        >
                          <div
                            class="mr-2"
                          >
                            Avatar
                          </div>
                          <div
                            class="flex items-center text-theme-color-neutral-500"
                            data-testid="table__Sort"
                          />
                        </div>
                      </th>
                      <th
                        class="text-sm text-left select-none text-theme-neutral-500"
                        colspan="1"
                        data-testid="table__th--1"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top  undefined"
                        >
                          <div
                            class="mr-2"
                          >
                            Address
                          </div>
                          <div
                            class="flex items-center text-theme-color-neutral-500"
                            data-testid="table__Sort"
                          />
                        </div>
                      </th>
                      <th
                        class="text-sm text-left select-none text-theme-neutral-500"
                        colspan="1"
                        data-testid="table__th--2"
                        role="columnheader"
                      >
                        <div
                          class="flex flex-inline align-top  float-right"
                        >
                          <div
                            class="mr-2"
                          >
                            Amount
                          </div>
                          <div
                            class="flex items-center text-theme-color-neutral-500"
                            data-testid="table__Sort"
                          />
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    role="rowgroup"
                  >
                    <tr
                      class="border-b border-theme-neutral-200"
                      data-testid="recipient-list__recipient-list-item"
                    >
                      <td
                        class="w-12 py-4"
                      >
                        <div
                          class="sc-AxiKw daEcTw"
                        />
                      </td>
                      <td>
                        <div
                          class="inline-block truncate align-middle"
                        >
                          <span
                            class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                            data-testid="address__wallet-name"
                          >
                            Recipient 1
                          </span>
                          <span
                            class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            FJKDSA…SJKDFJ
                          </span>
                        </div>
                      </td>
                      <td
                        class="font-bold text-right text-theme-neutral-800"
                      >
                        100 ARK
                      </td>
                    </tr>
                    <tr
                      class="border-b border-theme-neutral-200"
                      data-testid="recipient-list__recipient-list-item"
                    >
                      <td
                        class="w-12 py-4"
                      >
                        <div
                          class="sc-AxiKw daEcTw"
                        />
                      </td>
                      <td>
                        <div
                          class="inline-block truncate align-middle"
                        >
                          <span
                            class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                            data-testid="address__wallet-name"
                          >
                            Recipient 2
                          </span>
                          <span
                            class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            AhFJKD…SJKDFJ
                          </span>
                        </div>
                      </td>
                      <td
                        class="font-bold text-right text-theme-neutral-800"
                      >
                        100 ARK
                      </td>
                    </tr>
                    <tr
                      class="border-b border-theme-neutral-200"
                      data-testid="recipient-list__recipient-list-item"
                    >
                      <td
                        class="w-12 py-4"
                      >
                        <div
                          class="sc-AxiKw daEcTw"
                        />
                      </td>
                      <td>
                        <div
                          class="inline-block truncate align-middle"
                        >
                          <span
                            class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                            data-testid="address__wallet-name"
                          >
                            Recipient 3
                          </span>
                          <span
                            class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            FAhFJK…SJKDFJ
                          </span>
                        </div>
                      </td>
                      <td
                        class="font-bold text-right text-theme-neutral-800"
                      >
                        100 ARK
                      </td>
                    </tr>
                    <tr
                      class="border-b border-theme-neutral-200"
                      data-testid="recipient-list__recipient-list-item"
                    >
                      <td
                        class="w-12 py-4"
                      >
                        <div
                          class="sc-AxiKw daEcTw"
                        />
                      </td>
                      <td>
                        <div
                          class="inline-block truncate align-middle"
                        >
                          <span
                            class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                            data-testid="address__wallet-name"
                          >
                            Recipient 4
                          </span>
                          <span
                            class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            FAhFJK…SJKDFJ
                          </span>
                        </div>
                      </td>
                      <td
                        class="font-bold text-right text-theme-neutral-800"
                      >
                        100 ARK
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 pt-6"
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Smartbridge
          </div>
          <div
            class="mt-2 font-semibold"
          >
            Hello!
          </div>
        </div>
        <div
          class="mx-2"
        >
          <div
            class="sc-AxhUy kDidoG"
            height="32"
            width="32"
          >
            <svg>
              smartbridge.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="mt-2"
      >
        <div
          class="border rounded-lg border-theme-neutral-300"
        >
          <div
            class="relative p-3"
          >
            <div
              class="grid grid-cols-2 divide-x divide-gray-400"
            >
              <div
                class="flex flex-col justify-center px-6 py-5"
              >
                <span
                  class="text-sm text-theme-neutral-500"
                >
                  Transaction(s) Amount
                </span>
                <span
                  class="mt-2 font-semibold"
                  data-testid="total-amount-box__transaction-amount"
                >
                  400 ARK
                </span>
              </div>
              <div
                class="flex flex-col justify-center px-6 py-5 text-right"
              >
                <span
                  class="text-sm text-theme-neutral-500"
                >
                  Transaction fee
                </span>
                <span
                  class="mt-2 text-lg font-semibold"
                  data-testid="total-amount-box__transaction-fee"
                >
                  0.09660435 ARK
                </span>
              </div>
            </div>
            <div
              class="absolute top-0 bottom-0 left-0 right-0 flex items-center justify-center h-full text-center"
            >
              <div
                class="px-1 py-2 bg-white"
              >
                <div
                  class="sc-AxhUy cIoObu"
                  height="15"
                  width="15"
                >
                  <svg>
                    plus.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex flex-col items-center border-t rounded-b-lg border-theme-neutral-300 justfiy-center py-7 bg-theme-neutral-100"
          >
            <span
              class="text-sm text-theme-neutral-500"
            >
              Total Amount
            </span>
            <span
              class="text-2xl font-bold"
              data-testid="total-amount-box__total"
            >
              400.09660435 ARK
            </span>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Transaction Send should render 3rd step 1`] = `
<DocumentFragment>
  <section
    data-testid="TransactionSend__step--third"
  >
    <form
      class="space-y-8"
      data-testid="Form"
    >
      <div>
        <h1
          class="mb-0"
        >
          Passphrase
        </h1>
        <p
          class="text-theme-neutral-dark"
        >
          Confirm your password to continue
        </p>
        <div
          class="grid grid-flow-row"
        >
          <div
            class="flex items-center py-6 true pt-8 pb-0"
          >
            <div
              class="flex-1"
            >
              <div
                class="text-sm font-semibold text-theme-neutral-500"
              >
                Your password
              </div>
              <div
                class="mt-2 font-semibold"
              >
                <div
                  class="sc-fzozJi OgXfh max-w-20"
                >
                  <input
                    class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 pr-12"
                    data-testid="Input"
                    name="passphrase"
                    type="password"
                  />
                  <div
                    class="sc-AxheI sc-AxmLO ecniej mr-4"
                  >
                    <button
                      class="flex items-center justify-center w-full h-full text-2xl focus:outline-none bg-theme-background text-theme-primary-400"
                      data-testid="InputPassword__toggle"
                      type="button"
                    >
                      <div
                        class="sc-AxhUy cPXLjK"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          eye.svg
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </section>
</DocumentFragment>
`;

exports[`Transaction Send should render 4th step 1`] = `
<DocumentFragment>
  <section
    data-testid="TransactionSend__step--fourth"
  >
    <div>
      <h1
        class="mb-0"
      >
        Confirm Your Transaction
      </h1>
      <svg
        class="my-8"
      >
        confirm-transaction-ledger-banner.svg
      </svg>
      <div
        class="mt-8 text-center text-theme-neutral-700"
        data-testid="LedgerConfirmation-description"
      >
        Please review and verify the information on your Ledger device. Choose Accept to complete your transaction.
      </div>
      <div
        class="inline-flex items-center justify-center w-full mt-8 space-x-3"
      >
        <div
          class="sc-fzokOt gYqKim"
          color="primary"
        />
        <span
          class="font-semibold text-black"
          data-testid="LedgerConfirmation-loading_message"
        >
          Waiting for confirmation ...
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Transaction Send should render 5th step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="TransactionSuccessful"
  >
    <div>
      <h1
        class="mb-0"
      >
        Transaction Successful
      </h1>
      <div
        class="grid grid-flow-row gap-2"
      >
        <div
          class="w-full my-10"
        >
          <svg
            class="w-full"
          >
            transaction_successful.svg
          </svg>
        </div>
        <p
          class="mb-4 text-theme-neutral-dark"
        >
          Your transaction was successfully sent. Please monitor the blockchain to ensure your transaction is confirmed and processed. The following is relevant information for your transaction:
        </p>
        <div
          class="flex items-center py-6 true "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              ID
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="inline-block cursor-pointer"
                  data-testid="clipboard__wrapper"
                >
                  <div
                    class="inline-block truncate align-middle"
                  >
                    <span
                      class="sc-AxjAm StDqN text-theme-primary font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      AUexKjGtgsSpVz…MM6vJ6znEVTQWK
                    </span>
                  </div>
                </div>
                <div
                  class="mb-1 ml-5 text-theme-primary-300"
                >
                  <div
                    class="sc-AxhUy cPXLjK"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Block ID
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="inline-block cursor-pointer"
                  data-testid="clipboard__wrapper"
                >
                  <div
                    class="inline-block truncate align-middle"
                  >
                    <span
                      class="sc-AxjAm StDqN text-theme-primary font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      AUexKjGtgsSpVz…MM6vJ6znEVTQWK
                    </span>
                  </div>
                </div>
                <div
                  class="mb-1 ml-5 text-theme-primary-300"
                >
                  <div
                    class="sc-AxhUy cPXLjK"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Network
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  ROBank
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  AUexKj…EVTQWK
                </span>
              </div>
            </div>
          </div>
          <div
            class="ml-1 text-theme-danger-500"
          >
            <div
              class="sc-AxiKw jQtkkF bg-theme-background border-theme-danger-200"
            >
              <div
                class="sc-AxhUy hSYVGy"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="mb-2 text-sm font-semibold text-theme-neutral-500"
              >
                <span
                  class="mr-1"
                >
                  Sender
                </span>
                <div
                  class="sc-fznyAO dkNXHq"
                  color="warning"
                >
                  <span
                    class="text-sm"
                  >
                    Your address
                  </span>
                </div>
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  ROBank
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  AUexKj…EVTQWK
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              class="sc-AxiKw kvRvRJ"
            />
          </div>
        </div>
        <div
          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              IPFS Hash
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="mt-4 mr-1 font-semibold truncate text-theme-neutral-800 text-md"
              >
                JFKDJFKSDJFKDSJFKJKJFKDSJFKLJAKFJAKLJFKALSJFKLASJF
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 pb-0"
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Amount
            </div>
            <div
              class="mt-2 font-semibold"
            >
              1.00 ARK
            </div>
          </div>
          <div
            class="ml-1 text-theme-danger"
          >
            <div
              class="sc-AxiKw jQtkkF bg-theme-background border-theme-danger-200"
            >
              <div
                class="sc-AxhUy dFCItS"
                height="50"
                width="50"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
